# pyPool

./: pyproject.toml
physics/: ball.py  rack.py  table.py  value_objects.py
physics/tests/: collisions_tests.py  movement_tests.py  table_tests.py
