[tool.poetry]
name = "pypool"
version = "0.1.0"
description = ""
authors = ["Javier Cancela <javier.cancela.vicente@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.0"
pysdl2 = "^0.9.14"
pysdl2-dll = "^2.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
